--- a/Client/package.json
+++ b/Client/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.13",
     "autoprefixer": "10.4.16",
     "embla-carousel": "^8.0.0-rc12",
     "embla-carousel-autoplay": "^8.0.0-rc14",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "framer-motion": "^10.16.4",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
