--- a/Client/package.json
+++ b/Client/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@nextui-org/react": "^2.1.13",
     "autoprefixer": "10.4.16",
     "embla-carousel": "^8.0.0-rc12",
