--- a/Client/package.json
+++ b/Client/package.json
@@ -9,12 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "date-fns": "^2.30.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "fuse.js": "^7.0.0",
     "next": "13.5.2",
     "react": "18.2.0",
+    "react-calendar": "^4.6.1",
     "react-dom": "18.2.0",
-    "react-icons": "4.11.0"
+    "react-icons": "4.11.0",
+    "react-router": "^6.18.0",
+    "react-router-dom": "^6.18.0",
+    "react-slick": "^0.29.0",
+    "react-three-fiber": "^6.0.13",
+    "slick-carousel": "^1.8.1",
+    "three": "^0.158.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
