--- a/Client/package.json
+++ b/Client/package.json
@@ -19,6 +19,7 @@
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
     "framer-motion": "^10.16.4",
+    "jsbarcode": "^3.11.5",
     "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
