--- a/Client/package.json
+++ b/Client/package.json
@@ -9,18 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
-    "date-fns": "^2.30.0",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.5.2",
-    "fuse.js": "^7.0.0",
-
-    "autoprefixer": "10.4.16",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@nextui-org/react": "^2.1.13",
+    "autoprefixer": "10.4.16",
+    "date-fns": "^2.30.0",
     "embla-carousel": "^8.0.0-rc12",
     "embla-carousel-autoplay": "^8.0.0-rc14",
     "eslint": "8.49.0",
@@ -28,31 +21,27 @@
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
     "framer-motion": "^10.16.4",
-
+    "fuse.js": "^7.0.0",
     "jsbarcode": "^3.11.5",
-
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-calendar": "^4.6.1",
     "react-dom": "18.2.0",
-
     "react-icons": "4.11.0",
+    "react-intersection-observer": "^9.5.3",
     "react-router": "^6.18.0",
     "react-router-dom": "^6.18.0",
     "react-slick": "^0.29.0",
     "react-three-fiber": "^6.0.13",
     "slick-carousel": "^1.8.1",
-    "three": "^0.158.0"
-
     "tailwindcss": "3.3.3",
-    "react-icons": "4.11.0"
-
+    "three": "^0.158.0"
   },
   "devDependencies": {
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.5.2"
     "autoprefixer": "^10.4.16",
+    "eslint": "8.49.0",
+    "eslint-config-next": "13.5.2",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5"
   }
