--- a/Client/package.json
+++ b/Client/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@nextui-org/react": "^2.1.13",
+    "autoprefixer": "10.4.16",
     "date-fns": "^2.30.0",
     "embla-carousel": "^8.0.0-rc12",
     "embla-carousel-autoplay": "^8.0.0-rc14",
@@ -28,11 +29,13 @@
     "react-calendar": "^4.6.1",
     "react-dom": "18.2.0",
     "react-icons": "4.11.0",
+    "react-intersection-observer": "^9.5.3",
     "react-router": "^6.18.0",
     "react-router-dom": "^6.18.0",
     "react-slick": "^0.29.0",
     "react-three-fiber": "^6.0.13",
     "slick-carousel": "^1.8.1",
+    "tailwindcss": "3.3.3",
     "three": "^0.158.0"
   },
   "devDependencies": {
